# specforge

./: .env.example  .gitignore  config.yaml  pyproject.toml  vercel.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  globals.css  types.ts
frontend/src/components/: Header.tsx  MainPanel.tsx  RightPanel.tsx  Sidebar.tsx
prompts/agents/: column_deep_dive.md  interaction_analyzer.md  navigation_detector.md  screen_classifier.md  spec_assembler.md  spec_assembler_pass1.md  spec_assembler_pass2.md  spec_assembler_pass3.md  table_analyzer.md
prompts/decisions/: ambiguity_escalation.md  click_decision.md  depth_control.md  duplicate_detection.md  priority_ranking.md
prompts/sub_agents/: api_field_mapper.md  conditional_visibility_mapper.md  filter_type_detector.md  header_behavior_analyzer.md  validation_rule_inferrer.md
src/specforge/: __init__.py  __main__.py  server.py
src/specforge/agents/: __init__.py  interaction_analyzer.py  navigator.py  screen_classifier.py  spec_assembler.py  table_analyzer.py
src/specforge/ai/: __init__.py  anthropic_client.py  gemini_client.py  image_utils.py  prompt_manager.py  token_estimator.py
src/specforge/assembler/: __init__.py  merge_strategy.py  spec_template.py  validator.py
src/specforge/crawler/: __init__.py  checkpoint.py  element_fingerprint.py  scrapling_engine.py  session_manager.py
src/specforge/decisions/: __init__.py  ambiguity_resolver.py  click_decider.py  depth_controller.py  duplicate_detector.py  priority_ranker.py
ui/: dashboard.html  index.html
(+15 files in other folders)
